[package]
name = "archiv"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1"
zstd = "0.12"

# bin
clap = { version = "4", features = ["cargo", "derive"], optional = true }
anyhow = { version = "1", optional = true }

[dev-dependencies]
anyhow = "1"

[features]
bin = ["anyhow", "clap"]

[[bin]]
name = "archiv"
required-features = ["bin"]
