[package]
authors = ["Chris West (Faux) <git@goeswhere.com>"]
categories = ["encoding"]
description = "Read and write compressed, length-prefixed streams or file(s)"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "archiv"
readme = "README.md"
repository = "https://github.com/FauxFaux/archiv"
version = "0.1.0"

[dependencies]
thiserror = "1"
zstd = "0.12"

# bin
clap = { version = "4", features = ["cargo", "derive"], optional = true }
anyhow = { version = "1", optional = true }

[dev-dependencies]
anyhow = "1"

[features]
bin = ["anyhow", "clap"]

[[bin]]
name = "archiv"
required-features = ["bin"]
